--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html ng-app="myApp">
 
 <head>
-    <link rel="stylesheet" type="text/css" href="bootstrap.css">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="owl.carousel.css">
+    <link rel="stylesheet" href="owl.theme.css">
 </head>
 
 <body>
@@ -13,7 +14,7 @@
         </div>
     </div>
 
-    <div class="main" ng-controller="mainCtrl">
+    <div class="owl-carousel" ng-controller="mainCtrl">
         <div class="container">
             <div class="card" ng-repeat="pod in pods">
                 <app-info info="pod"></app-info>
@@ -25,9 +26,10 @@
 
 
 
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/owl.carousel.js"></script>
     <script src="js/controllers/mainCtrl.js"></script>
     <script src="js/directives/appInfo.js"></script>
     <script src="js/directives/subscribe.js"></script>
