got the home section working

--- a/js/directives/topFive.html
+++ b/js/directives/topFive.html
@@ -1,8 +1,9 @@
 
   <li>
-    <div>
-      <h2>{{ info.title }}</h2>
-      <p>{{ info.intro }}</p>
+    <div class="topFive">
+     <a ng-href="{{ info.link.attributes.href }}"><img ng-src="{{ info['im:image'][2].label }}" style="width:250px; height:250px;"></a>
+      <h2>{{ info['im:name'].label }}</h2>
+      <p>{{ info.summary.label }}</p>
     </div>
-    <img ng-src="{{ info.icon }}" class="icon">
   </li>
+<!-- ng-style="{ 'background-image': 'url({{ info['im:image'][2].label }})' }" -->
