--- a/index.html
+++ b/index.html
@@ -28,21 +28,26 @@
 
     <!-- <div id="particles-js"> -->
 
-    <section id="home" ng-controller="mainCtrl">
-      <!-- <h2>Top Podcasts</h2> -->
-      <ul class="carousel" ng-repeat="pod in pods">
-  <!-- Add as many slides as you want -->
+    <section id="home">
+      <div ng-controller="iTunesCtrl">
 
-        <top-five info="pod"></top-five>
+          <ul class="carousel" ng-repeat="pod in data">
+          <!-- Add as many slides as you want -->
 
-      </ul>
+            <top-five info="pod"></top-five>
+
+          </ul>
+
+      </div>
     </section>
 
     <section id="podcasts">
       <!-- <h2>What I Am Listening To</h2> -->
       <div class="blog-post" ng-controller="mainCtrl">
         <div ng-repeat="pod in pods">
+
           <pod-info class="box" info="pod"></pod-info>
+
         </div>
       </div>
     </section>
@@ -115,6 +120,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers/mainCtrl.js"></script>
+    <script src="js/controllers/iTunesCtrl.js"></script>
     <script src="js/directives/podInfo.js"></script>
     <script src="js/directives/readMore.js"></script>
     <script src="js/directives/topFive.js"></script>
