--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
 
     <section id="podcasts">
       <!-- <h2>What I Am Listening To</h2> -->
+      <!-- <read-more class="vote"></read-more> -->
+      <!-- <div class="vote">
+      											  <div class="t-up">
+          <span></span><p>3071</p><i class="add">+1</i>
+        </div>
+      											  <div class="t-down">
+          <span></span><p>1071</p><i class="sub">-1</i>
+        </div>
+      										</div> -->
       <div class="blog-post" ng-controller="mainCtrl">
         <div ng-repeat="pod in pods">
           <pod-info class="box" info="pod"></pod-info>
@@ -105,9 +114,10 @@
 
     </section>
 
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
     <script type="text/javascript" src="js/jq.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
     <script src="js/prefixfree.min.js"></script>
     <script src="js/particles.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.js"></script>
