--- a/js/directives/readMore.html
+++ b/js/directives/readMore.html
@@ -1,3 +1,8 @@
-<div class="btn" ng-click="download()">
-    {{ buttonText }}
-</div>
+<!-- <div class="vote"> -->
+											  <div class="t-up">
+    <span></span><p>0</p><i class="add">+1</i>
+  </div>
+											  <div class="t-down">
+    <span></span><p>0</p><i class="sub">-1</i>
+  </div>
+										<!-- </div> -->
