cleaned up some stuff.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <ul>
           <li><a class="link-1 entypo-home active" href="#home"></a></li>
            <li><a class="link-2 entypo-rss" href="#podcasts"></a></li>
-          <li><a class="link-3 entypo-mail" href="#about"></a></li>
-          <li><a class="link-4 entypo-user" href="#contact"></a></li>
+          <li><a class="link-3 entypo-user" href="#about"></a></li>
+          <li><a class="link-4 entypo-mail" href="#contact"></a></li>
         </ul>
       </nav>
     </header>
@@ -38,7 +38,6 @@
     </section>
 
     <section id="podcasts">
-      <!-- <h2>What I Am Listening To</h2> -->
       <!-- <read-more class="vote"></read-more> -->
       <!-- <div class="vote">
       											  <div class="t-up">
@@ -56,7 +55,6 @@
     </section>
 
     <section id="about">
-  <!-- <h2>Contact</h2> -->
       <form action="#" method="post">
       <div class="header">
          <p>News Letter Sign Up</p>
@@ -69,32 +67,28 @@
         <input type="submit" class="button" id="submit" value="SIGN UP">
       </div>
       </form>
-
     </section>
 
     <section id="contact">
-  <!-- <h2>About</h2> -->
       <div class="container">
         <div class="row top">
           <div class="twelve column">
             <div class="logo">F</div>
             <h1>Fernando D Fernandez</h1>
-            <h2> Web Developer</h2>
+            <h2> Web developer and podcast aficionado</h2>
           </div>
         </div>
 
         <div class="row">
           <div class="one-half column">
-            <div class="">
-              <h1></h1>
-              <ul></ul>
+            <div class="rant">
+              <h1>Podcasts are a way of keeping our need for story telling alive.  It is also a great way of keeping up with the things that intrest you.</h1>
             </div>
           </div>
 
           <div class="one-half column">
-            <div class="">
-              <h1></h1>
-              <ul></ul>
+            <div class="rant">
+              <h1>Why have a news letter when I can have you follow me socially instead, cheaper too.</h1>
             </div>
           </div>
         </div>
@@ -105,9 +99,9 @@
         <label for="share" class="label entypo-export"></label>
         <div class="social">
           <ul>
-            <li class="entypo-twitter"></li>
-            <li class="entypo-facebook"></li>
-            <li class="entypo-gplus"></li>
+            <a href="https://twitter.com/Fernando777"><li class="entypo-twitter"></li></a>
+            <a href="https://www.facebook.com/4nando"><li class="entypo-facebook"></li></a>
+            <li class="entypo-pinterest"></li>
           </ul>
         </div>
       </div>
@@ -129,6 +123,7 @@
     <script src="js/directives/readMore.js"></script>
     <script src="js/directives/topFive.js"></script>
     <script src="js/services/itunesSvc.js"></script>
+    <script src="js/services/iTunes2Svc.js"></script>
 
   </body>
 
