--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet" type="text/css">
     <link rel="stylesheet prefetch" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
     <link rel="stylesheet" href="css/style.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <title>PodMaker</title>
 
@@ -38,7 +39,7 @@
     </section>
 
     <section id="podcasts">
-      <!-- <read-more class="vote"></read-more> -->
+      <!-- <like-dislike></like-dislike> -->
       <!-- <div class="vote">
       											  <div class="t-up">
           <span></span><p>3071</p><i class="add">+1</i>
@@ -47,7 +48,7 @@
           <span></span><p>1071</p><i class="sub">-1</i>
         </div>
       										</div> -->
-      <div class="blog-post" ng-controller="mainCtrl">
+      <div class="blog-post" ng-controller="iTunes2Ctrl">
         <div ng-repeat="pod in pods">
           <pod-info class="box" info="pod"></pod-info>
         </div>
@@ -117,13 +118,16 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/controllers/mainCtrl.js"></script>
+    <script src="js/controllers/iTunes2Ctrl.js"></script>
     <script src="js/controllers/iTunesCtrl.js"></script>
+    <script src="js/controllers/likeDislikeCtrl.js"></script>
     <script src="js/directives/podInfo.js"></script>
-    <script src="js/directives/readMore.js"></script>
+    <script src="js/directives/likeDislike.js"></script>
     <script src="js/directives/topFive.js"></script>
     <script src="js/services/itunesSvc.js"></script>
     <script src="js/services/iTunes2Svc.js"></script>
+
+
 
   </body>
 
