--- a/js/directives/podInfo.html
+++ b/js/directives/podInfo.html
@@ -1,6 +1,6 @@
 <img ng-src="{{ info['im:image'][2].label }}" class="icon">
 <div class="cover top-left">
   <h2 class="title">{{ info['im:name'].label }}</h2>
-  <p class="intro">{{ info.summary.label }}</p>
-  <read-more class="vote"></read-more>
+  <a ng-href="{{ info.link.attributes.href }}"><p class="intro">{{ info.summary.label }}</p></a>
+  <like-dislike></like-dislike>
 </div>
