--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <title>PodMaker</title>
-
   </head>
+
   <body>
 
     <header>
@@ -32,7 +32,6 @@
     <section id="home">
       <div ng-controller="iTunesCtrl">
           <ul class="carousel" ng-repeat="pod in data">
-          <!-- Add as many slides as you want -->
             <top-five info="pod"></top-five>
           </ul>
       </div>
@@ -56,7 +55,7 @@
     </section>
 
     <section id="about">
-      <form action="#" method="post">
+       <form action="#" method="post"> <!-- ng-submit="authentication..." -->
       <div class="header">
          <p>News Letter Sign Up</p>
       </div>
@@ -64,7 +63,7 @@
         <p>You can keep up with my rant on what I think are the best podcasts out there.</p>
       </div>
       <div class="input">
-        <input type="text" class="button" id="email" name="email" placeholder="NAME@EXAMPLE.COM">
+        <input type="text" class="button" id="email" name="email" placeholder="NAME@EXAMPLE.COM"> <!-- ng-model="user.email" -->
         <input type="submit" class="button" id="submit" value="SIGN UP">
       </div>
       </form>
@@ -106,7 +105,6 @@
           </ul>
         </div>
       </div>
-
     </section>
 
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
@@ -126,8 +124,6 @@
     <script src="js/directives/topFive.js"></script>
     <script src="js/services/itunesSvc.js"></script>
     <script src="js/services/iTunes2Svc.js"></script>
-
-
 
   </body>
 
