--- a/public/js/directives/likeDislike.html
+++ b/public/js/directives/likeDislike.html
@@ -6,5 +6,5 @@
     <span></span><p>0</p><i class="sub">-1</i>
   </div>
 										</div> -->
-											<i class="fa fa-thumbs-up" ng-click="voteUp(info)">{{ up }}</i>
-											<i class="fa fa-thumbs-down" ng-click="voteDown(info)">{{ down }}</i>
+											<i class="fa fa-thumbs-up" ng-click="voteUp(info)">{{ upVotes }}</i>
+											<i class="fa fa-thumbs-down" ng-click="voteDown(info)">{{ downVotes }}</i>
